crates/snapshot-tests/tests/snapshots/parser__redefine__table_then_dotted.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[DuplicateKey]: the key `b` is defined multiple times in table at `a`
  ┌─ table_then_dotted:4:12
  │
3 │         b = {}
  │         - first key instance
4 │         [a.b]
  │            ^ duplicate key


error: the key `b` is defined multiple times in table at `a`
 --> table_then_dotted:4:12
  |
3 |         b = {}
  |         - first key instance
4 |         [a.b]
  |            ^ duplicate key
Error {
    kind: "DuplicateKey",
    message: "duplicate key",
    span: 39..40,
    path: Some(
        "a.b",
    ),
}
