crates/snapshot-tests/tests/snapshots/parser__redefine__table_then_dotted_then_table_again.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[DuplicateTable]: redefinition of table `a`
  ┌─ table_then_dotted_then_table_again:6:1
  │    
2 │ ╭   [a]
3 │ │   foo="bar"
  │ ╰───────────' first table instance
  ·    
6 │   ╭ [a]
7 │   │ 
  │   ╰^ duplicate table


error: redefinition of table `a`
 --> table_then_dotted_then_table_again:6:1
  |
2 | / [a]
3 | | foo="bar"
  | |_________- first table instance
...
6 |   [a]
  |   ^^^ duplicate table
Error {
    kind: "DuplicateTable",
    message: "redefinition of table",
    span: 31..35,
    path: Some(
        "a",
    ),
}
